--- a/style.css
+++ b/style.css
@@ -4,8 +4,8 @@ fieldset, img { border: none; }
 header, footer, nav, section, article, aside, hgroup { display: block }
 li { list-style:none; }
 ul, ol { margin: .25em 2em; }
-/* ul li { list-style: disc; margin: .5em 0em; font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
-   font-size: 1.25em; } */
+ul li { list-style: disc; margin: .5em 0em; font-family: 'Goudy Bookletter 1911', Georgia, Times, serif;
+   font-size: 1.25em;   }
 ol li { list-style: decimal; margin: .25em 0em }
 
 /* ------------------------------ html#red ------------------------------ */
@@ -67,7 +67,6 @@ footer p { margin: 0em 0em; }
 .float-forty { width: 40%; }
 .float-left { float: left; margin-right: .5em; }
 .float-right { float: right; margin-right: .5em; }
-.img-sm { width: 10%; height: auto; }
 
 div.content { width: 900px; margin: 0em auto; }
 
@@ -76,9 +75,6 @@ div.alert-message p { margin: 0em 0em; }
 /* ------------------------------
 Addons
 ------------------------------ */
-
-/* ------------------------------ div#countdown ------------------------------ */
-div#countdown { text-align: center; margin: 0 auto; width: fit-content; }
 
 /* ------------------------------ div#cta ------------------------------ */
 div#cta { margin: 1em 1em; background: rgb(255,255,255); border: 2px solid rgb(230,230,230); border-top:none; border-radius: 5px; -moz-border-radius: 5px; -webkit-border-radius: 5px; box-shadow: 0px 0px 8px rgba(250,230,100,5); -moz-box-shadow: 0px 0px 8px rgba(250,230,100,5); -khtml-box-shadow: 0px 0px 8px rgba(250,230,100,5); -webkit-box-shadow: 0px 0px 8px rgba(250,230,100,5); }
